--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "jsx": "react",
     "baseUrl": ".",
     "paths": {
       "@/*": [
